--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
         background-repeat: no-repeat;
         background-attachment: fixed;
         opacity: 0.9;
-        background-image: url({{url_for('static',filename='images/bg.jpg')}});>
+        background-image: url({{url_for('static',filename='images/logo.webp')}});>
         
       }
       .form-container {
